objects/vindyaobj__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hyderabad</fullName>
                </value>
                <value>
                    <fullName>Bangalore</fullName>
                </value>
                <value>
                    <fullName>Chennai</fullName>
                </value>
                <value>
                    <fullName>Delhi</fullName>
                </value>
                <value>
                    <fullName>Noida</fullName>
                </value>
                <value>
                    <fullName>Jaipur</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ID_No__c</fullName>
        <displayFormat>A-{000}</displayFormat>
        <label>ID No</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Mobile_No__c</fullName>
        <label>Mobile No</label>
        <type>Phone</type>
    </fields>
    <label>vindyaobj</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Recods_by_City</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>Recods by City</label>
    </listViews>
    <nameField>
        <label>vindyaobj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>vindyaobjs</pluralLabel>
    <recordTypes>
        <fullName>vindhya</fullName>
        <active>true</active>
        <label>vindhya</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Mobile_field_validation</fullName>
        <active>false</active>
        <errorConditionFormula>NOT( LEN( Mobile_No__c ) = 10 )</errorConditionFormula>
        <errorDisplayField>Mobile_No__c</errorDisplayField>
        <errorMessage>Mobile number should contain only 10 digits.</errorMessage>
    </validationRules>
</CustomObject>